--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -15,8 +15,44 @@
 
 .Navbar nav {
     height: 100%;
+    display: block;
 }
 
 .Logo {
     height: 80%;
 }
+
+.NavigationItem  {
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+    text-decoration: none;
+}
+
+.NavigationItem ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.NavigationItem li {
+    display: inline-block;
+    margin: 20px;
+}
+
+li:hover {
+    background-color: #ddd;
+}
+
+.NavigationItem a {
+    text-decoration: none;
+    color: black;
+}
+
+.NavigationItem a:hover,
+.NavigationItem a.active {
+    color: #00aaff;
+}
+
+
