--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -2,3 +2,40 @@
     margin-top: 50px;
     background-color: #f2f2f2;
 }
+
+body { 
+    margin:0;
+    padding: 0;
+    min-height: 100%;
+    background-color: #f2f2f2;
+}
+
+.SignUpTable, .SignInTable{
+    margin-top: 100px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
+    text-align: center;
+    background-color: white;
+    width: 55%;
+
+}
+.SignUpTable td, .SignInTable td{
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+.ErrorText{
+    text-align: center!important;
+}
+
+.SignUpTable p, .SignInTable p{
+    color: red!important;
+    margin: 3px!important;
+    padding: 2px!important;
+    font-family: Arial, Helvetica, sans-serif!important;
+    font-size: small;
+    text-align: center;
+}
