--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -34,3 +34,9 @@
     background-color: #F4F4F4;
     border-radius: 10px;
 }
+
+.UploadButton{
+    height: 100%!important;
+    padding: 0px;
+    vertical-align: top!important;
+}
