--- a/frontend/src/components/Posts/Post/Post.css
+++ b/frontend/src/components/Posts/Post/Post.css
@@ -1,5 +1,5 @@
 .Post {
-    border-radius: 3px;
+    border-radius: 10px;
     border: 1px solid #e6e6e6;
     background-color: #fff;
     margin-bottom: 60px;
@@ -26,16 +26,21 @@
     font-weight: bold;
 }
 .Post-image-bg {
-    background-color: #efefef;
+    background-color: white;
+    padding: 0px 15px 10px 15px;
+    max-height: 400px;
+    max-width: 800px;
+    text-align: center;
 }
 .Post-image img {
     display: block;
     width: 100%;
 }
 .Post-caption {
-    padding: 16px 16px;
+    padding: 6px 16px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .Post-caption strong {
     font-family: 'PT Sans', sans-serif;
@@ -53,3 +58,15 @@
     cursor: pointer;
 }
 
+.Post-comment{
+    margin: 0px 10px 10px 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.loading{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
