--- a/frontend/src/components/Posts/Post/Post.css
+++ b/frontend/src/components/Posts/Post/Post.css
@@ -37,10 +37,15 @@
     width: 100%;
 }
 .Post-caption {
-    padding: 6px 16px;
+    padding: 0px 16px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px;
+}
+
+.Post-caption h4{
+    margin: 0px;
 }
 .Post-caption strong {
     font-family: 'PT Sans', sans-serif;
@@ -69,4 +74,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.Post-comments{
+    margin: 0px 16px 5px 16px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.Post-comments b{
+    margin-right: 10px;
 }
