--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -35,7 +35,8 @@
     transform: translate(-50%, -50%);
     border-radius: 10px;
     padding: 20px;
-    min-width: 50%;
+    min-width: 50vw;
+    display: flex;
 }
 
 .ProfileCaption {
@@ -45,13 +46,16 @@
     align-items: center;
 }
 
-.PostComment{
-    padding: 6px 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.ProfileComment{
+  width: 30vw;
+  word-wrap: break-word;
+  margin-left: 10px;
 }
 
+.ProfileCommentScroll{
+    overflow-y: auto;
+    max-height: 75vh;
+}
 .PopupPicture{
     text-align: center;
 }
