refining of test cases with correct signal code expectations and app variable

--- a/frontend/src/components/Posts/Post/Post.css
+++ b/frontend/src/components/Posts/Post/Post.css
@@ -27,16 +27,15 @@
 }
 .Post-image-bg {
     background-color: white;
-    padding: 0px 15px 10px 15px;
-    max-height: 400px;
-    max-width: 800px;
+    margin: -10px 15px 15px 15px;
     text-align: center;
+    overflow: hidden
 }
 .Post-image img {
     display: block;
     width: 100%;
 }
-.Post-caption {
+.Post-like {
     padding: 0px 16px;
     display: flex;
     justify-content: space-between;
@@ -44,10 +43,10 @@
     margin-bottom: 10px;
 }
 
-.Post-caption h4{
+.Post-like h4{
     margin: 0px;
 }
-.Post-caption strong {
+.Post-like strong {
     font-family: 'PT Sans', sans-serif;
     font-weight: bold;
 }
@@ -84,4 +83,9 @@
 
 .Post-comments b{
     margin-right: 10px;
+}
+
+.Post-caption{
+    padding: 0px 16px;
+    margin: 0px
 }
