--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -17,14 +17,14 @@
 }
 
 .ProfileStats{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     margin: 10px;
      font-size: large;
 }
 
 .ProfileGrid{
     width: 100%!important;
-    height: 450;
+    height: 450px;
 }
 
 .Popup{
