--- a/frontend/src/components/Layout/Layout.module.css
+++ b/frontend/src/components/Layout/Layout.module.css
@@ -1,13 +1,12 @@
 .Content {
-    margin-top: 50px;
-    background-color: #f2f2f2;
+    /*margin-top: 50px;*/
 }
 
 body { 
     margin:0;
     padding: 0;
-    min-height: 100%;
-    background-color: #f2f2f2;
+    height: 100%;
+    width: 100%;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     font-weight: 400;
     font-style: normal;
