--- a/frontend/src/components/Posts/Post/Post.css
+++ b/frontend/src/components/Posts/Post/Post.css
@@ -79,6 +79,7 @@
     margin: 0px 16px 5px 16px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 .Post-comments b{
@@ -88,4 +89,9 @@
 .Post-caption{
     padding: 0px 16px;
     margin: 0px
+}
+
+.Post-Comments2{
+    max-height: 10rem;
+    overflow-y: scroll;
 }
