--- a/frontend/src/components/Posts/Post/Post.module.css
+++ b/frontend/src/components/Posts/Post/Post.module.css
@@ -6,36 +6,36 @@
     margin-left : 30%;
     margin-right: 30%;
 }
-.Post-user {
+.Post_user {
     display: flex;
     padding: 16px;
     align-items: center;
 }
-.Post-user-avatar {
+.Post_userAvatar {
     width: 30px;
     height: 30px;
 }
-.Post-user-avatar img {
+.Post_userAvatar img {
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
-.Post-user-nickname {
+.Post_userNickname {
     margin-left: 12px;
     font-family: 'PT Sans', sans-serif;
     font-weight: bold;
 }
-.Post-image-bg {
+.Post_image{
     background-color: white;
     margin: -10px 15px 15px 15px;
     text-align: center;
     overflow: hidden
 }
-.Post-image img {
+.Post_image img {
     display: block;
     width: 100%;
 }
-.Post-like {
+.Post_like {
     padding: 0px 16px;
     display: flex;
     justify-content: space-between;
@@ -43,55 +43,63 @@
     margin-bottom: 10px;
 }
 
-.Post-like h4{
+.Post_like h4{
     margin: 0px;
 }
-.Post-like strong {
+.Post_like strong {
     font-family: 'PT Sans', sans-serif;
     font-weight: bold;
 }
 
-.comment-button {
+.comment_button {
     padding: 5px;
     border: none;
 }
 
 
-.comment-button:hover {
+.comment_button:hover {
     background-color: lightgrey;
     cursor: pointer;
 }
 
-.Post-comment{
-    margin: 0px 10px 10px 10px;
+.Post_commentBox{
+    margin: 0px 0px 10px 0px;
     display: flex;
     justify-content: space-between;
 }
 
-.loading{
+.Posts_loading{
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.Post-comments{
+.Post_comments{
     margin: 0px 16px 5px 16px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif;
     
 }
 
-.Post-comments b{
+.Post_comment{
+    margin: 0px 16px 5px 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.Post_comment b{
     margin-right: 10px;
 }
 
-.Post-caption{
+.Post_caption{
     padding: 0px 16px;
     margin: 0px
 }
 
-.Post-Comments2{
+.Post_commentsBox{
     max-height: 10rem;
-    overflow-y: scroll;
+    margin-bottom: 10px;
+    overflow-y:auto;
 }
