--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -1,4 +1,4 @@
-.ProfileContainer{
+.Profile_container{
     margin-top: 100px;
     border-radius: 10px;
     margin-left: auto;
@@ -9,20 +9,20 @@
     width: 50%;
 }
 
-.ProfileTop{
+.Profile_top{
     display: flex;
     justify-content: space-between!important;
     margin: 10px;
     padding-bottom: 20px;
 }
 
-.ProfileStats{
+.Profile_stats{
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
     margin: 10px;
      font-size: large;
 }
 
-.ProfileGrid{
+.Profile_grid{
     width: 100%!important;
     height: 450px;
 }
@@ -39,27 +39,11 @@
     display: flex;
 }
 
-.ProfileCaption {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.ProfileComment{
-  width: 30vw;
-  word-wrap: break-word;
-  margin-left: 10px;
-}
-
-.ProfileCommentScroll{
-    overflow-y: auto;
-    max-height: 75vh;
-}
-.PopupPicture{
+.Popup_picture{
     text-align: center;
 }
 
-.loading{
+.Profile_loading{
     position: fixed;
     top: 50%;
     left: 50%;
