--- a/frontend/src/components/Logo/Logo.module.css
+++ b/frontend/src/components/Logo/Logo.module.css
@@ -1,4 +1,4 @@
-.Logo {
+.logo {
     background-color: white;
     padding: 8px;
     height: 100%;
@@ -6,6 +6,6 @@
     border-radius: 5px;
 }
 
-.Logo img {
+.logo img {
     height: 100%;
 }
